# docling_repo

./: 1-extraction.py  1-hybridchunker.py  2-chunking.py  3-openai_chunker.py  6-extract_html.py  7-extraction_vlm.py  8-extraction_accelerator.py  9-information_extraction.ipynb  9-information_extractor.py  README.md  main.py  pyproject.toml
