[project]
name = "docling-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.53.0",
    "docling-core[chunking]>=2.48.1",
    "ipykernel>=6.30.1",
    "lancedb>=0.25.0",
    "onnxruntime>=1.22.1",
    "openai>=1.108.1",
    "pydantic>=2.11.9",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "rapidocr>=3.4.1",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "tiktoken>=0.11.0",
]
